# Cromulent-PRNG

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  cpp.yml  crystal.yml  csharp.yml  fortran.yml  fsharp.yml  go.yml  haskell.yml  java.yml  javascript.yml  julia.yml  kotlin.yml  lisp.yml  nim.yml  ocaml.yml  python.yml  racket.yml  ruby.yml  rust.yml  swift.yml  zig.yml
apps/: bench_micro.c  dump_raw.c  sanity.c
bindings/: README.md
bindings/cpp/: CMakeLists.txt  README.md
bindings/cpp/include/: cromulent.hpp
bindings/cpp/test/: cpp_engine.cpp
bindings/crystal/: .gitignore  README.md  shard.yml
bindings/crystal/spec/: cromulent_spec.cr
bindings/crystal/src/: cromulent.cr
bindings/csharp/: CromulentEngine.cs  Program.cs  README.md  Seeding.cs  cromulent.csproj
bindings/fortran/: .gitignore  README.md
bindings/fortran/src/: cromulent.f90
bindings/fortran/test/: test_cromulent.f90
bindings/fsharp/: Cromulent.fs  Program.fs  README.md  cromulent.fsproj
bindings/go/: README.md  cromulent.go  cromulent_test.go  go.mod
bindings/haskell/: README.md
bindings/haskell/src/: Cromulent.hs
bindings/haskell/test/: Spec.hs
bindings/java/: README.md
bindings/java/src/main/java/com/cromulent/: CromulentEngine.java  Seeding.java  StrongEngine.java
bindings/java/src/test/java/com/cromulent/: CromulentTest.java
bindings/javascript/: README.md  cromulent.mjs  cromulent.test.mjs  package.json
bindings/julia/: README.md
bindings/julia/src/: Cromulent.jl
bindings/julia/test/: runtests.jl
bindings/kotlin/: README.md
bindings/kotlin/src/: Cromulent.kt  Test.kt
bindings/lisp/: README.md
bindings/lisp/src/: cromulent.lisp
bindings/lisp/test/: test.lisp
bindings/nim/: .gitignore  README.md  cromulent.nimble
bindings/nim/src/: cromulent.nim
bindings/nim/tests/: test_cromulent.nim
bindings/ocaml/: .gitignore  README.md
bindings/ocaml/src/: cromulent.ml
bindings/ocaml/test/: test_cromulent.ml
bindings/python/: README.md  cromulent.py  test_cromulent.py
bindings/racket/: README.md  cromulent.rkt
bindings/ruby/: README.md
bindings/ruby/lib/: cromulent.rb
bindings/ruby/test/: test_cromulent.rb
bindings/rust/: Cargo.toml  README.md
bindings/rust/src/: lib.rs
bindings/swift/: .gitignore  Package.swift  README.md
bindings/swift/Sources/cromulent/: Cromulent.swift  main.swift
bindings/zig/: README.md  build.zig  cromulent.zig
include/: cromulent.h  internal.h
src/: cromulent_registry.c
src/reference/: pcg64.c  splitmix64.c  xoshiro256.c
src/scalar/: cromulent_scalar.c  cromulent_strong.c
src/simd/: cromulent_avx2.c
tests/: README.md
tests/results/: practrand128TB.txt  practrand16TB.txt  practrand32TB.txt  practrand64TB.txt
tests/stats/: practrand.sh
tests/unit/: CMakeLists.txt  jump.c  load.c  range.c  save.c  strong_next.c
