[package]
name = "cromulent"
version = "0.1.0"
edition = "2021"
description = "The Cromulent PRNG (Rust port of the scalar reference generator)"
license = "MIT"
repository = "https://github.com/seanwevans/Cromulent-PRNG"
keywords = ["prng", "random", "rng"]
categories = ["algorithms", "no-std::no-alloc"]

[lib]
path = "src/lib.rs"

[dependencies]
